<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flurry Helper</string>
    <string name="action_access_api_key">Set API key</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="api_key_hint">Enter API access key</string>
    <string name="project_data_chooser_appmetrics">App metrics</string>
    <string name="project_data_chooser_eventmetrics">Event metrics</string>
    <!-- introduce -->
    <string name="flurry_link_text">Link to Flurry</string>
    <!-- menu -->
    <string name="menu_refresh_data">Refresh</string>
    <string name="menu_set_api_key">Set API key</string>
    <string name="menu_set_time_period">Set time period</string>
    <string name="menu_set_version">Set version</string>
    <string name="menu_show_chart_on_project_fragment">Show chart</string>
    <string name="menu_hide_chart_on_project_fragment">Hide chart</string>
    <string name="diaply_period_last_day">Last day</string>
    <string name="diaply_period_last_week">Last week</string>
    <string name="diaply_period_last_month">Last month</string>
    <string name="diaply_period_three_months">Last three monthes</string>
    <string name="diaply_period_half_year">Last half year</string>
    <string name="diaply_period_year">Last year</string>
    <!-- event metrics -->
    <string name="event_metrics_users_last_day">Users last day</string>
    <string name="event_metrics_users_last_month">Users last month</string>
    <string name="event_metrics_users_last_week">Users last week</string>
    <string name="event_metrics_avg_users_last_day">Avg users last day</string>
    <string name="event_metrics_avg_users_last_month">Avg users last month</string>
    <string name="event_metrics_avg_users_last_week">Avg users last week</string>
    <string name="event_metrics_total_counts">Total counts</string>
    <string name="event_metrics_total_sessions">Total sessions</string>
    <!-- version dialog -->
    <string name="version_dialog_all_version">All version</string>
    <!-- app metrics -->
    <string name="chart_type_chart">Chart</string>
    <string name="chart_type_table">Table</string>
    <!-- event detail -->
    <string name="chart_skipped_data">Skipped</string>
    <!-- toast text -->
	<string name="start_loading">Start loading</string>
</resources>